@@ -57,6 +57,7 @@ public:
 	size_t nops() const;
 	ex op(size_t i) const;
 	ex map(map_function & f) const;
+	ex subs(const lst & ls, const lst & lr, unsigned options = 0) const;
 	ex eval(int level=0) const;
 
 protected:
