@@ -3,6 +3,8 @@ This file records noteworthy changes.
 1.1.1 (<date>)
 * lst (and exprseq) provide iterators for read-only element access. For
   sequential access this is one order faster than using op().
+* Implemented relational::subs() (this was done in 1.0.9 but inadvertently
+  omitted from the 1.1 branch).
 
 1.1.0 (3 April 2003)
 * Removed deprecated macros is_ex_a, is_ex_exactly_a and friends for good.
